--- a/website/resume_styles.css
+++ b/website/resume_styles.css
@@ -9,7 +9,10 @@ body
 }
 
 /* HEADER STYLES*/
-header
+header {
+    background-color: #212529;
+}
+nav
 {
     /*position: sticky;
     top: 0px;*/
@@ -19,7 +22,7 @@ header
     width: 100%; /*to use up more of the center space*/
     margin: auto; /*re-center it*/
 
-    background-color: #001d3d;
+    background-color: #212529;
     height: 15vh;
     align-items: center;
 }
@@ -27,17 +30,23 @@ a.main{
     text-decoration: none;
     color: white;
     font-weight: 700;
-    font-size: 24px;
-}
+    font-size: 1.5em;
+}   
 a.main:active{
     color: peachpuff;
+}
+a.main:hover {
+    text-decoration: none;
+    color: white;
 }
 .dropbtn {
     background-color: transparent;
     color: white;
-    padding: 16px;
-    font-size: 16px;
+    padding: 1em;
+    font-size: 1em;
     border: none;
+    transition: all 1.5s ease;
+    border-radius: 10px;
 }
 
 .dropdown {
@@ -51,7 +60,7 @@ a.main:active{
   pointer-events: none;
   position: absolute;
   background-color: #f1f1f1;
-  min-width: 160px;
+  min-width: 10em;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   transition: all 0.5s ease;
@@ -76,12 +85,12 @@ a.main:active{
 }
 
 .dropdown:hover .dropbtn{
-    background-color: #457b9d;
+    background-color: #343a40;
     transform: scale(1.05);
     transition: all 1.5s ease;
 }
 .current{
-    background-color: #457b9d;
+    background-color: #495057;
 }
 /* end of header stuff*/
 h1.hname
@@ -137,7 +146,7 @@ a.hlink:hover {
     display: none;
 }
 @media (max-width: 1000px) {
-    header {
+    nav {
         height: 7vh;
     }
     a.main {
